# python-task-manager

./: Dockerfile  compose.yml  pyproject.toml
task_manager/: settings.py
